# dmt-asr

./: .gitignore  CHORECREFORMAT_Whisper--Large-V2_judgements.csv  README.md  fw2_df_reformatted.csv  pyproject.toml  requirements.txt  w2v2_df_reformatted.csv
.cache/v/cache/: lastfailed
dmt_asr/: combine_judgement_files.py  confusion_matrix.py  dmt-asr.py  generalisedbasedir.py  glob_properties.py  model_load_transcribe.py  participant_session.py  participantfile.py  participantsession.py  pathing.py  process_confmatrix.py  reformat_chorec.py  textgrid.py
dmt_asr/adagt/: adagt.py  run_init.py
dmt_asr/judgement_asr/: asr_baseline.py
dmt_asr/judgement_assessor/: assessor.py
dmt_asr/prompt_generation/: prompt_gen.py
dmt_asr/tests/: test_assessor_judgement.py
files_static/: kaart1A.txt  kaart1B.txt  kaart2A.txt  kaart2B.txt  kaart3A.txt  kaart3B.txt
output/: Faster-Whisper-Large-v2_VAD_transcriptions.csv  Faster-Whisper-Large-v2_transcriptions.csv  Wav2Vec2.0-CGN_transcriptions.csv
output/GroNLP/wav2vec2-dutch-large-ft-cgn/4010103_kaart1A_jan24/: 4010103_kaart1A_jan24.csv
output/GroNLP/wav2vec2-dutch-large-ft-cgn/4010103_kaart2A_jan24/: 4010103_kaart2A_jan24.csv
output/GroNLP/wav2vec2-dutch-large-ft-cgn/4010103_kaart3A_jan24/: 4010103_kaart3A_jan24.csv
output/GroNLP/wav2vec2-dutch-large-ft-cgn/4010111_kaart1A_jan24/: 4010111_kaart1A_jan24.csv
output/GroNLP/wav2vec2-dutch-large-ft-cgn/4010111_kaart2A_jan24/: 4010111_kaart2A_jan24.csv
output/GroNLP/wav2vec2-dutch-large-ft-cgn/4010111_kaart3A_jan24/: 4010111_kaart3A_jan24.csv
(+597 files in other folders)
