[tool.poetry]
name = "dmt-asr"
version = "0.1.0"
description = ""
authors = ["groenhofbram <groenhofbram@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.1"
transformers = "^4.45.1"
faster-whisper = "^1.0.3"


[tool.poetry.scripts]
main = 'dmt_asr.dmt-asr:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
